# obs-quick-access-utility

./: .gitignore  CMakeLists.txt  README.md  buildspec.json  installer.iss.in
.github/: CODEOWNERS  FUNDING.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/actions/build-plugin/: action.yaml
.github/actions/run-cmake-format/: action.yaml
.github/scripts/: Build-Windows.ps1
.github/scripts/utils.zsh/: setup_ccache
.github/workflows/: build-project.yaml  build.yml  push.yaml
build-aux/: .run-format.zsh  run-cmake-format
cmake/common/: helpers_common.cmake
cmake/windows/resources/: installer-Windows.iss.in
data/: en-US.ini
src/: plugin-module.c  quick-access-dock.cpp  quick-access-dock.hpp  quick-access-source.cpp  quick-access-source.hpp  quick-access-utility.cpp  quick-access-utility.hpp  quick-access.cpp  quick-access.hpp  version.h  version.h.in
